[package]
name = "raydium-clmm-substream"
version = "0.1.0"
edition = "2021"

[lib]
name = "raydium_clmm_substream"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-program-instructions = "0.1.1"
prost = "0.11"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bs58 = "0.5.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
